--- a/ClimbWithMe/LogInView.xib
+++ b/ClimbWithMe/LogInView.xib
@@ -13,6 +13,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInView" customModule="ClimbWithMe" customModuleProvider="target">
             <connections>
+                <outlet property="logInStackViewCenterY" destination="xDe-K6-1Qq" id="E5W-ij-k3M"/>
+                <outlet property="logoWithTextImageView" destination="DTk-bh-b4E" id="ToL-mB-qg2"/>
                 <outlet property="view" destination="iN0-l3-epB" id="0Bv-3Z-yf5"/>
             </connections>
         </placeholder>
@@ -27,32 +29,41 @@
                         <constraint firstAttribute="width" secondItem="DTk-bh-b4E" secondAttribute="height" multiplier="52:73" id="8Sx-rg-3Du"/>
                     </constraints>
                 </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IQt-Sn-GIj">
-                    <rect key="frame" x="75" y="417" width="225" height="167"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="IQt-Sn-GIj">
+                    <rect key="frame" x="75" y="450.5" width="225" height="100"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ogr-k0-NYF">
-                            <rect key="frame" x="0.0" y="0.0" width="225" height="55.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="225" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardAppearance="alert" returnKeyType="done"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0j0-Ay-9qs">
-                            <rect key="frame" x="0.0" y="55.5" width="225" height="56"/>
+                            <rect key="frame" x="0.0" y="35" width="225" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYh-fd-pBt">
-                            <rect key="frame" x="0.0" y="111.5" width="225" height="55.5"/>
-                            <state key="normal" title="Log In"/>
-                        </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xvN-cF-s3x">
+                            <rect key="frame" x="0.0" y="70" width="225" height="30"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ycy-w7-hm1" userLabel="Forgot Password">
+                                    <rect key="frame" x="0.0" y="0.0" width="112.5" height="30"/>
+                                    <state key="normal" title="Forgot"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYh-fd-pBt">
+                                    <rect key="frame" x="112.5" y="0.0" width="112.5" height="30"/>
+                                    <state key="normal" title="Log In"/>
+                                </button>
+                            </subviews>
+                        </stackView>
                     </subviews>
                 </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="IQt-Sn-GIj" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.6" id="9HA-iv-xKi"/>
-                <constraint firstItem="IQt-Sn-GIj" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.25" id="HO6-QC-pUC"/>
+                <constraint firstItem="IQt-Sn-GIj" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.15" id="HO6-QC-pUC"/>
                 <constraint firstItem="DTk-bh-b4E" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.6" id="Hcf-TU-Q8o"/>
                 <constraint firstItem="DTk-bh-b4E" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.6" id="TB3-pt-Vxp"/>
                 <constraint firstItem="DTk-bh-b4E" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="iqL-jB-MFW"/>
